cmake_minimum_required(VERSION 3.5)
project(loKC)

set(CMAKE_C_STANDARD 11)
find_package(X11 REQUIRED)
add_executable(lokC pam_manager.c pam_manager.h lokc.c lock.h lock_window.c lock_window.h)
include_directories(${X11_INCLUDE_DIR})
link_directories(${X11_LIBRARIES})
target_link_libraries(lokC ${X11_LIBRARIES})
target_link_libraries(lokC pam)
target_link_libraries(lokC jansson)
target_compile_options(lokC PRIVATE -Wall -Wextra)